--- a/practice/practice05/practice05_3b/practice05_3b.vcxproj
+++ b/practice/practice05/practice05_3b/practice05_3b.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{17923a17-6efe-433f-b325-3d68457f47bf}</ProjectGuid>
-    <RootNamespace>project01</RootNamespace>
+    <ProjectGuid>{68215ea9-3b3e-43b7-be6d-a5d7ba83f2cf}</ProjectGuid>
+    <RootNamespace>practice053b</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="practice05_3b.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
