--- a/practice/practice05/practice05_2b/practice05_2b.vcxproj
+++ b/practice/practice05/practice05_2b/practice05_2b.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{17923a17-6efe-433f-b325-3d68457f47bf}</ProjectGuid>
-    <RootNamespace>project01</RootNamespace>
+    <ProjectGuid>{1ddec41f-9fe8-4db9-9345-26424cf7a7f0}</ProjectGuid>
+    <RootNamespace>practice052b</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="problem2b.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
