--- a/practice/practice05/practice05_3a/practice05_3a.vcxproj
+++ b/practice/practice05/practice05_3a/practice05_3a.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{17923a17-6efe-433f-b325-3d68457f47bf}</ProjectGuid>
-    <RootNamespace>project01</RootNamespace>
+    <ProjectGuid>{9a89bbc4-a6e4-4153-a60c-1b387a13e3c3}</ProjectGuid>
+    <RootNamespace>practice053a</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="problem3a.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
