--- a/practice/practice05/practice05_3a/practice05_3a.vcxproj.filters
+++ b/practice/practice05/practice05_3a/practice05_3a.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="problem3a.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
