--- a/practice/practice04/problem3a/problem3a.vcxproj
+++ b/practice/practice04/problem3a/problem3a.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{05c63831-a2eb-4f41-a8b2-d18fc416283e}</ProjectGuid>
-    <RootNamespace>practice04</RootNamespace>
+    <ProjectGuid>{487f943a-e672-48f8-b48f-6cd490991bec}</ProjectGuid>
+    <RootNamespace>problem3a</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="problem3a.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
